--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.28.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.12.0",
     "recharts": "^3.7.0",
     "sonner": "^2.0.7",
